[feat] 블루투스 기능 개발

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,17 +7,23 @@ include(grpc.cmake)
 # C++ 표준 설정
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
+
 # libusb 헤더 파일과 라이브러리 경로 찾기
 find_path(LIBUSB_INCLUDE_DIR NAMES libusb.h PATHS /usr/include/libusb-1.0)
 find_library(LIBUSB_LIBRARY NAMES usb-1.0 PATHS /usr/lib /usr/local/lib)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(SYSTEMD REQUIRED libsystemd)
+find_package(Boost REQUIRED COMPONENTS system)
 
 # 헤더 파일 경로 추가
-include_directories(${CMAKE_SOURCE_DIR}/include ${LIBUSB_INCLUDE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/include ${LIBUSB_INCLUDE_DIR} ${SYSTEMD_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 # 기존의 KeyboardDriver 실행 파일
 set(KEYBOARD_DRIVER_SOURCES main.cpp)
 file(GLOB MORE_SOURCES "${CMAKE_SOURCE_DIR}/read_thread/*.cpp" "${CMAKE_SOURCE_DIR}/logger_thread/*.cpp"
-    "${CMAKE_SOURCE_DIR}/utils/*.cpp" "${CMAKE_SOURCE_DIR}/grpc_thread/*.cpp" "${CMAKE_SOURCE_DIR}/controller/*.cpp")
+    "${CMAKE_SOURCE_DIR}/utils/*.cpp" "${CMAKE_SOURCE_DIR}/grpc_thread/*.cpp" "${CMAKE_SOURCE_DIR}/controller/*.cpp" "${CMAKE_SOURCE_DIR}/bluetooth/*.cpp")
 list(APPEND KEYBOARD_DRIVER_SOURCES ${MORE_SOURCES})
 
 file(GLOB UTILS_SOURCE "${CMAKE_SOURCE_DIR}/utils/*.cpp")
@@ -29,6 +35,9 @@ list(APPEND KEYBOARD_RESTARTER_SOURCES ${MORE_SOURCES})
 
 set(KEYBOARD_RUN_MACRO_SOURCES macro.cpp)
 list(APPEND KEYBOARD_RUN_MACRO_SOURCES ${UTILS_SOURCE})
+
+set(KEYBOARD_BLUETOOTH_SOURCES bluetooth.cpp)  # restart.cpp를 포함
+list(APPEND KEYBOARD_BLUETOOTH_SOURCES ${MORE_SOURCES})
 
 # Protocol Buffers 파일 생성
 set(PROTO_PATH "${CMAKE_SOURCE_DIR}/proto")
@@ -53,22 +62,28 @@ foreach(PROTO_FILE ${PROTO_FILES})
   )
   list(APPEND KEYBOARD_DRIVER_SOURCES "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.pb.cc" "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.grpc.pb.cc")
   list(APPEND KEYBOARD_RESTARTER_SOURCES "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.grpc.pb.cc" "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.pb.cc")
+  list(APPEND KEYBOARD_BLUETOOTH_SOURCES "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.grpc.pb.cc" "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.pb.cc")
 endforeach()
+
 add_executable(KeyboardDriver ${KEYBOARD_DRIVER_SOURCES})
 add_executable(KeyboardDriverRestarter ${KEYBOARD_RESTARTER_SOURCES})
 add_executable(RunMacro ${KEYBOARD_RUN_MACRO_SOURCES})
+add_executable(KeyboardBluetoothDriver ${KEYBOARD_BLUETOOTH_SOURCES})
 
 # 라이브러리와 링크
-target_link_libraries(KeyboardDriver PRIVATE ${LIBUSB_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
-target_link_libraries(KeyboardDriverRestarter PRIVATE ${LIBUSB_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
-target_link_libraries(RunMacro PRIVATE ${LIBUSB_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(KeyboardDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(KeyboardDriverRestarter PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(RunMacro PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION})
+target_link_libraries(KeyboardBluetoothDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
 
 # 컴파일 옵션
 target_compile_options(KeyboardDriver PRIVATE -Wall -O2)
 target_compile_options(KeyboardDriverRestarter PRIVATE -Wall -O2)
 target_compile_options(RunMacro PRIVATE -Wall -O2)
+target_compile_options(KeyboardBluetoothDriver PRIVATE -Wall -O2)
 
 # 설치 경로
 install(TARGETS KeyboardDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
 install(TARGETS KeyboardDriverRestarter DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
 install(TARGETS RunMacro DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
+install(TARGETS KeyboardBluetoothDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
