--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
 
+# libcurl 라이브러리 및 헤더 파일 경로 찾기
+find_package(CURL REQUIRED)
+include_directories(${CURL_INCLUDE_DIRS})
+
+# jsoncpp 라이브러리 및 헤더 파일 경로 찾기
+find_path(JSONCPP_INCLUDE_DIR json/json.h PATHS /usr/include/jsoncpp /usr/local/include/jsoncpp)
+find_library(JSONCPP_LIBRARY jsoncpp PATHS /usr/lib /usr/local/lib)
+include_directories(${JSONCPP_INCLUDE_DIR})
+
 # libusb 헤더 파일과 라이브러리 경로 찾기
 find_path(LIBUSB_INCLUDE_DIR NAMES libusb.h PATHS /usr/include/libusb-1.0)
 find_library(LIBUSB_LIBRARY NAMES usb-1.0 PATHS /usr/lib /usr/local/lib)
@@ -28,7 +37,6 @@ list(APPEND KEYBOARD_DRIVER_SOURCES ${MORE_SOURCES})
 
 file(GLOB UTILS_SOURCE "${CMAKE_SOURCE_DIR}/utils/*.cpp")
 
-
 # 새로운 KeyboardDriverRestarter 실행 파일
 set(KEYBOARD_RESTARTER_SOURCES restart.cpp)  # restart.cpp를 포함
 list(APPEND KEYBOARD_RESTARTER_SOURCES ${MORE_SOURCES})
@@ -36,7 +44,7 @@ list(APPEND KEYBOARD_RESTARTER_SOURCES ${MORE_SOURCES})
 set(KEYBOARD_RUN_MACRO_SOURCES macro.cpp)
 list(APPEND KEYBOARD_RUN_MACRO_SOURCES ${UTILS_SOURCE})
 
-set(KEYBOARD_BLUETOOTH_SOURCES bluetooth.cpp)  # restart.cpp를 포함
+set(KEYBOARD_BLUETOOTH_SOURCES bluetooth.cpp)  # bluetooth.cpp를 포함
 list(APPEND KEYBOARD_BLUETOOTH_SOURCES ${MORE_SOURCES})
 
 # Protocol Buffers 파일 생성
@@ -65,25 +73,48 @@ foreach(PROTO_FILE ${PROTO_FILES})
   list(APPEND KEYBOARD_BLUETOOTH_SOURCES "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.grpc.pb.cc" "${GENERATED_PROTOBUF_PATH}/${PROTO_NAME}.pb.cc")
 endforeach()
 
-add_executable(KeyboardDriver ${KEYBOARD_DRIVER_SOURCES})
+# updater.cpp 파일 추가
+set(UPDATER_SOURCES updater.cpp)
+list(APPEND UPDATER_SOURCES ${UTILS_SOURCE})
+
+# 플랫폼 감지
+if (CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
+    message(STATUS "Detected ARM 64-bit architecture")
+    set(PLATFORM "ARM 64bit")
+    set(BLUETOOTH "No Bluetooth")
+    add_executable(KeyboardDriver ${UPDATER_SOURCES})
+    target_compile_options(KeyboardDriver PRIVATE -Wall -O2)
+    target_link_libraries(KeyboardDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+    install(TARGETS KeyboardDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
+elseif (CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
+    message(STATUS "Detected ARM 32-bit architecture")
+    set(PLATFORM "ARM 32bit")
+    set(BLUETOOTH "Bluetooth")
+    add_executable(KeyboardDriver ${UPDATER_SOURCES})
+    target_compile_definitions(KeyboardDriver PRIVATE HAVE_BLUETOOTH)
+    target_compile_options(KeyboardDriver PRIVATE -Wall -O2)
+    target_link_libraries(KeyboardDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+    install(TARGETS KeyboardDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
+else()
+    message(FATAL_ERROR "Unsupported platform")
+endif()
+
+# 기존 실행 파일들 추가
 add_executable(KeyboardDriverRestarter ${KEYBOARD_RESTARTER_SOURCES})
 add_executable(RunMacro ${KEYBOARD_RUN_MACRO_SOURCES})
 add_executable(KeyboardBluetoothDriver ${KEYBOARD_BLUETOOTH_SOURCES})
 
 # 라이브러리와 링크
-target_link_libraries(KeyboardDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
-target_link_libraries(KeyboardDriverRestarter PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
-target_link_libraries(RunMacro PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION})
-target_link_libraries(KeyboardBluetoothDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(KeyboardDriverRestarter PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
+target_link_libraries(RunMacro PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARY} pthread ${_REFLECTION})
+target_link_libraries(KeyboardBluetoothDriver PRIVATE ${LIBUSB_LIBRARY} ${SYSTEMD_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES} ${JSONCPP_LIBRARY} pthread ${_REFLECTION} ${_GRPC_GRPCPP} ${_PROTOBUF_LIBPROTOBUF})
 
 # 컴파일 옵션
-target_compile_options(KeyboardDriver PRIVATE -Wall -O2)
 target_compile_options(KeyboardDriverRestarter PRIVATE -Wall -O2)
 target_compile_options(RunMacro PRIVATE -Wall -O2)
 target_compile_options(KeyboardBluetoothDriver PRIVATE -Wall -O2)
 
 # 설치 경로
-install(TARGETS KeyboardDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
 install(TARGETS KeyboardDriverRestarter DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
 install(TARGETS RunMacro DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
 install(TARGETS KeyboardBluetoothDriver DESTINATION ${CMAKE_SOURCE_DIR}/rspi)
